<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <data>

        <variable
                name="viewModel"
                type="com.ydly.rankingalarm2.ui.ranking.RankingViewModel"
                />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingBottom="19dp"
            android:background="@drawable/box_outline"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativeGrading"
                android:textColor="@color/milk_chocolate"
                android:textSize="@dimen/paneTitleFontSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/paneRelativeGrading_title"
                android:layout_marginTop="15dp"
                />

        <ImageView
                android:id="@+id/paneRelativeGrading_grade"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:src="@drawable/a_stamp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toTopOf="parent"
                />

        <TextView
                android:id="@+id/panelRelativeGrading_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativeGrading_today"
                android:textSize="@dimen/paneContentFontSize"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/paneRelativeGrading_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="19dp"
                />

        <TextView
                android:id="@+id/panelRelativeGrading_today_overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativeGrading_overall"
                android:textSize="@dimen/paneContentFontSize"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="142dp"
                android:layout_marginTop="19dp"
                app:layout_constraintTop_toTopOf="@+id/panelRelativeGrading_today"
                />

        <TextView
                android:id="@+id/panelRelativeGrading_today_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativeGrading_morning"
                android:textSize="@dimen/paneContentFontSize"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/panelRelativeGrading_today_overall"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="142dp"
                android:layout_marginTop="7dp"
                />

        <TextView
                android:id="@+id/panelRelativeGrading_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativeGrading_average"
                android:textSize="@dimen/paneContentFontSize"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/panelRelativeGrading_today"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="54dp"
                />

        <TextView
                android:id="@+id/panelRelativeGrading_average_overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativeGrading_overall"
                android:textSize="@dimen/paneContentFontSize"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="142dp"
                android:layout_marginTop="19dp"
                app:layout_constraintTop_toTopOf="@+id/panelRelativeGrading_average"
                />

        <TextView
                android:id="@+id/panelRelativeGrading_average_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativeGrading_morning"
                android:textSize="@dimen/paneContentFontSize"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/panelRelativeGrading_average_overall"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="142dp"
                android:layout_marginTop="7dp"
                />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>