<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.alarm.EditAlarmActivity"
        >

    <data>
        <variable
                name="viewModel"
                type="com.ydly.rankingalarm2.ui.alarm.EditAlarmViewModel"
                />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editAlarm_btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                <TimePicker
                        android:id="@+id/editAlarm_timePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner"
                        android:hour="@={viewModel.hour}"
                        android:minute="@={viewModel.minute}"
                        />

                <TextView
                        android:id="@+id/editAlarm_txtView_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:mutableText="@{viewModel.getDateString()}"
                        />

            </LinearLayout>

        </ScrollView>

        <TextView
                android:id="@+id/editAlarm_btn_save"
                android:layout_width="0dp"
                android:layout_height="@dimen/textViewBtnHeight"
                android:text="@string/save"
                android:textAlignment="gravity"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/colorConfirm"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/editAlarm_btn_cancel"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                />

        <TextView
                android:id="@+id/editAlarm_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/textViewBtnHeight"
                android:text="@string/cancel"
                android:textAlignment="gravity"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/colorCancel"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editAlarm_btn_save"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                />

        <Button
                android:id="@+id/editAlarm_btn_datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test Datepicker Dialog"
                app:layout_constraintBottom_toTopOf="@id/editAlarm_btn_cancel"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                />

        <Button
                android:id="@+id/editAlarm_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_alarm"
                app:layout_constraintBottom_toTopOf="@id/editAlarm_btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>